SharedSurfaceType::Basic not supported for WebVR on Android
Categories
(Core :: WebVR, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox72 | --- | unaffected |
| firefox73 | --- | unaffected |
| firefox74 | --- | fixed |
People
(Reporter: mortimergoro, Assigned: mortimergoro)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
After updating to the latest Gecko WebVR stopped working in Firefox Reality and we see this error in the console.
SharedSurfaceType::Basic not supported for WebVR
I think it's related to Bug 1477756 (it worked well on the Gecko build from two days ago)
Jeff: Do you think it's related? If so, is there any possible fix?
Comment 1•6 years ago
|
||
Probably. Are there tests for this?
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Comment 2•6 years ago
|
||
We don't have tests partially because we aren't able to run WebGL in the android emulator.
Comment 3•6 years ago
|
||
We run WebGL tests on android-hw bots. Is that an option?
Comment 4•6 years ago
|
||
Comment 5•6 years ago
|
||
I can do some tests with Android Firefox Reality on Monday. I saw the Bug 1477756 land today and am reviewing the changes to see what impact this would have on WebVR while rebasing my Bug 1419190 (WebXR) patch.
Comment 6•6 years ago
|
||
(In reply to Jeff Gilbert [:jgilbert] from comment #3)
We run WebGL tests on android-hw bots. Is that an option?
What is missing to automate this is a kind of GeckoView-WebVR test runner container. I have some ideas on how such a thing might be made, and would like to build it after WebXR lands if it proves useful.
Comment 7•6 years ago
|
||
This asserts for me on GeckoView DEBUG builds:
https://webvr.info/samples/03-vr-presentation.html
Assert: https://searchfox.org/mozilla-central/source/gfx/layers/wr/WebRenderTextureHost.cpp#32
Seems like old code though?
| Assignee | ||
Comment 8•6 years ago
|
||
We are not using WebRender yet in FxR. We have this preference set: gfx.webrender.force-disabled false
Updated•6 years ago
|
Comment 9•6 years ago
|
||
(In reply to Imanol Fernandez from comment #8)
We are not using WebRender yet in FxR. We have this preference set:
gfx.webrender.force-disabled false
It's actually set to true. That was probably a typo.
| Assignee | ||
Comment 10•6 years ago
•
|
||
yes, it's actually set to true in Firefox Reality (Webrender disabled), it was a typo when I copied the pref name.
| Assignee | ||
Comment 11•6 years ago
|
||
I confirmed it's a regression from Bug 1477756
It works well on the commit before Bug 1477756 and fails after applying the patches
Comment 12•6 years ago
|
||
This issue is blocking FxR from moving to newer versions of GeckoView, in fact we are pinned to a single version of GV right now. If it can not be fixed immediately the breaking patch should probably be backed out.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 13•6 years ago
|
||
The VR ScreenBuffer is created with the default SurfaceFactory_Basic. We need to morph the screen to use the correct SurfaceTexture factory.
| Assignee | ||
Comment 14•6 years ago
|
||
Comment 15•6 years ago
|
||
Comment 16•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Description
•