Bug 1608500 - Set SurfaceTexture factory into the VR GLScreenBuffer. r=jgilbert

The VR ScreenBuffer is created with the default SurfaceFactory_Basic. We need to morph the screen to use the correct SurfaceTexture factory.

Differential Revision: https://phabricator.services.mozilla.com/D60007